--- a/main.ipynb
+++ b/main.ipynb
@@ -207,8 +207,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sorting by biggest increases"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "momentum_df.sort_values(by='Net Change', ascending=False, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -241,43 +257,43 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>MMM</td>\n",
-       "      <td>124.75</td>\n",
-       "      <td>133.445</td>\n",
-       "      <td>6.969940</td>\n",
+       "      <th>360</th>\n",
+       "      <td>PLTR</td>\n",
+       "      <td>44.86</td>\n",
+       "      <td>92.660</td>\n",
+       "      <td>106.553723</td>\n",
        "      <td>N/a</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>AOS</td>\n",
-       "      <td>76.87</td>\n",
-       "      <td>63.335</td>\n",
-       "      <td>-17.607649</td>\n",
+       "      <th>171</th>\n",
+       "      <td>EQT</td>\n",
+       "      <td>37.48</td>\n",
+       "      <td>51.710</td>\n",
+       "      <td>37.966916</td>\n",
        "      <td>N/a</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>ABT</td>\n",
-       "      <td>114.22</td>\n",
-       "      <td>131.785</td>\n",
-       "      <td>15.378217</td>\n",
+       "      <th>468</th>\n",
+       "      <td>VRSN</td>\n",
+       "      <td>181.26</td>\n",
+       "      <td>249.255</td>\n",
+       "      <td>37.512413</td>\n",
        "      <td>N/a</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>ABBV</td>\n",
-       "      <td>187.85</td>\n",
-       "      <td>172.230</td>\n",
-       "      <td>-8.315145</td>\n",
+       "      <th>308</th>\n",
+       "      <td>MCK</td>\n",
+       "      <td>507.41</td>\n",
+       "      <td>695.000</td>\n",
+       "      <td>36.970103</td>\n",
        "      <td>N/a</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>ACN</td>\n",
-       "      <td>360.80</td>\n",
-       "      <td>290.175</td>\n",
-       "      <td>-19.574557</td>\n",
+       "      <th>365</th>\n",
+       "      <td>PAYC</td>\n",
+       "      <td>164.63</td>\n",
+       "      <td>218.030</td>\n",
+       "      <td>32.436372</td>\n",
        "      <td>N/a</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -285,21 +301,238 @@
        "</div>"
       ],
       "text/plain": [
-       "  Ticker  Price (6 months)  Price (now)  Net Change Number of Shares to Buy\n",
-       "0    MMM            124.75      133.445    6.969940                     N/a\n",
-       "1    AOS             76.87       63.335  -17.607649                     N/a\n",
-       "2    ABT            114.22      131.785   15.378217                     N/a\n",
-       "3   ABBV            187.85      172.230   -8.315145                     N/a\n",
-       "4    ACN            360.80      290.175  -19.574557                     N/a"
+       "    Ticker  Price (6 months)  Price (now)  Net Change Number of Shares to Buy\n",
+       "360   PLTR             44.86       92.660  106.553723                     N/a\n",
+       "171    EQT             37.48       51.710   37.966916                     N/a\n",
+       "468   VRSN            181.26      249.255   37.512413                     N/a\n",
+       "308    MCK            507.41      695.000   36.970103                     N/a\n",
+       "365   PAYC            164.63      218.030   32.436372                     N/a"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "momentum_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Creating Excel Output with all data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "momentum_df_copy = momentum_df.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Ticker</th>\n",
+       "      <th>Price (6 months)</th>\n",
+       "      <th>Price (now)</th>\n",
+       "      <th>Net Change</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>360</th>\n",
+       "      <td>PLTR</td>\n",
+       "      <td>44.86</td>\n",
+       "      <td>92.660</td>\n",
+       "      <td>106.553723</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>171</th>\n",
+       "      <td>EQT</td>\n",
+       "      <td>37.48</td>\n",
+       "      <td>51.710</td>\n",
+       "      <td>37.966916</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>468</th>\n",
+       "      <td>VRSN</td>\n",
+       "      <td>181.26</td>\n",
+       "      <td>249.255</td>\n",
+       "      <td>37.512413</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>308</th>\n",
+       "      <td>MCK</td>\n",
+       "      <td>507.41</td>\n",
+       "      <td>695.000</td>\n",
+       "      <td>36.970103</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>365</th>\n",
+       "      <td>PAYC</td>\n",
+       "      <td>164.63</td>\n",
+       "      <td>218.030</td>\n",
+       "      <td>32.436372</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Ticker  Price (6 months)  Price (now)  Net Change\n",
+       "360   PLTR             44.86       92.660  106.553723\n",
+       "171    EQT             37.48       51.710   37.966916\n",
+       "468   VRSN            181.26      249.255   37.512413\n",
+       "308    MCK            507.41      695.000   36.970103\n",
+       "365   PAYC            164.63      218.030   32.436372"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "momentum_df_copy = momentum_df_copy.drop('Number of Shares to Buy', axis=1)\n",
+    "momentum_df_copy.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "writer = pd.ExcelWriter('total_data.xlsx', engine='xlsxwriter')\n",
+    "\n",
+    "momentum_df_copy.to_excel(writer, sheet_name='Movers', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Formatting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "background_color = '#0a0a23'\n",
+    "font_color = '#ffffff'\n",
+    "\n",
+    "string_format = writer.book.add_format(\n",
+    "    {\n",
+    "        'font_color': font_color,\n",
+    "        'bg_color': background_color,\n",
+    "        'border': 1\n",
+    "    }\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dollar_format = writer.book.add_format(\n",
+    "    {\n",
+    "        'num_format': '$0.00',\n",
+    "        'font_color': font_color,\n",
+    "        'bg_color': background_color,\n",
+    "        'border': 1\n",
+    "    }\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "percent_format = writer.book.add_format(\n",
+    "    {\n",
+    "        'num_format': '0%',\n",
+    "        'font_color': font_color,\n",
+    "        'bg_color': background_color,\n",
+    "        'border': 1\n",
+    "    }\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Applying Formats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "column_formats = {\n",
+    "    'A': ['Ticker', string_format],\n",
+    "    'B': ['Price (6 months)', dollar_format],\n",
+    "    'C': ['Price (now)', dollar_format],\n",
+    "    'D': ['Net Change', percent_format]\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for column in column_formats.keys():\n",
+    "    writer.sheets['Movers'].set_column(f'{column}:{column}', 20, column_formats[column][1])\n",
+    "    writer.sheets['Movers'].write(f'{column}1', column_formats[column][0], column_formats[column][1])\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "writer.close()"
    ]
   }
  ],
