Actually fixed the format

--- a/main.ipynb
+++ b/main.ipynb
@@ -124,27 +124,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Errno 2] No such file or directory: 'tokens.json'\n",
-      "Token file does not exist or invalid formatting, creating \"tokens.json\"\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[Schwabdev] Open to authenticate: https://api.schwabapi.com/v1/oauth/authorize?client_id=sLS2QjpxNJbE8Vp9AUABE1p8dc3EdIC5&redirect_uri=https://127.0.0.1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "client = schwabdev.Client(app_key=api_key, app_secret=api_secret)"
+    "client = schwabdev.Client(app_key=api_key, app_secret=api_secret, capture_callback=False)"
    ]
   },
   {
@@ -176,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +169,7 @@
     "    price_history = client.price_history(symbol, periodType='month', period = 6, startDate=six_months, endDate=today).json()\n",
     "    price_now = price_history['candles'][-1]['close']\n",
     "    price_6_months = price_history['candles'][0]['close']\n",
-    "    net_change = ((price_now - price_6_months)/ price_6_months) * 100\n",
+    "    net_change = round(((price_now - price_6_months)/ price_6_months) * 100, 2)\n",
     "    entries.append(\n",
     "        [\n",
     "            symbol,\n",
@@ -199,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -260,40 +244,40 @@
        "      <th>360</th>\n",
        "      <td>PLTR</td>\n",
        "      <td>44.86</td>\n",
-       "      <td>92.660</td>\n",
-       "      <td>106.553723</td>\n",
+       "      <td>92.770</td>\n",
+       "      <td>106.80</td>\n",
        "      <td>N/a</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>171</th>\n",
        "      <td>EQT</td>\n",
        "      <td>37.48</td>\n",
-       "      <td>51.710</td>\n",
-       "      <td>37.966916</td>\n",
+       "      <td>51.890</td>\n",
+       "      <td>38.45</td>\n",
        "      <td>N/a</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>468</th>\n",
        "      <td>VRSN</td>\n",
        "      <td>181.26</td>\n",
-       "      <td>249.255</td>\n",
-       "      <td>37.512413</td>\n",
+       "      <td>249.185</td>\n",
+       "      <td>37.47</td>\n",
        "      <td>N/a</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>308</th>\n",
        "      <td>MCK</td>\n",
        "      <td>507.41</td>\n",
-       "      <td>695.000</td>\n",
-       "      <td>36.970103</td>\n",
+       "      <td>695.040</td>\n",
+       "      <td>36.98</td>\n",
        "      <td>N/a</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>365</th>\n",
        "      <td>PAYC</td>\n",
        "      <td>164.63</td>\n",
-       "      <td>218.030</td>\n",
-       "      <td>32.436372</td>\n",
+       "      <td>217.980</td>\n",
+       "      <td>32.41</td>\n",
        "      <td>N/a</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -302,14 +286,14 @@
       ],
       "text/plain": [
        "    Ticker  Price (6 months)  Price (now)  Net Change Number of Shares to Buy\n",
-       "360   PLTR             44.86       92.660  106.553723                     N/a\n",
-       "171    EQT             37.48       51.710   37.966916                     N/a\n",
-       "468   VRSN            181.26      249.255   37.512413                     N/a\n",
-       "308    MCK            507.41      695.000   36.970103                     N/a\n",
-       "365   PAYC            164.63      218.030   32.436372                     N/a"
+       "360   PLTR             44.86       92.770      106.80                     N/a\n",
+       "171    EQT             37.48       51.890       38.45                     N/a\n",
+       "468   VRSN            181.26      249.185       37.47                     N/a\n",
+       "308    MCK            507.41      695.040       36.98                     N/a\n",
+       "365   PAYC            164.63      217.980       32.41                     N/a"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -371,36 +355,36 @@
        "      <th>360</th>\n",
        "      <td>PLTR</td>\n",
        "      <td>44.86</td>\n",
-       "      <td>92.660</td>\n",
-       "      <td>106.553723</td>\n",
+       "      <td>92.770</td>\n",
+       "      <td>106.80</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>171</th>\n",
        "      <td>EQT</td>\n",
        "      <td>37.48</td>\n",
-       "      <td>51.710</td>\n",
-       "      <td>37.966916</td>\n",
+       "      <td>51.890</td>\n",
+       "      <td>38.45</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>468</th>\n",
        "      <td>VRSN</td>\n",
        "      <td>181.26</td>\n",
-       "      <td>249.255</td>\n",
-       "      <td>37.512413</td>\n",
+       "      <td>249.185</td>\n",
+       "      <td>37.47</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>308</th>\n",
        "      <td>MCK</td>\n",
        "      <td>507.41</td>\n",
-       "      <td>695.000</td>\n",
-       "      <td>36.970103</td>\n",
+       "      <td>695.040</td>\n",
+       "      <td>36.98</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>365</th>\n",
        "      <td>PAYC</td>\n",
        "      <td>164.63</td>\n",
-       "      <td>218.030</td>\n",
-       "      <td>32.436372</td>\n",
+       "      <td>217.980</td>\n",
+       "      <td>32.41</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -408,14 +392,14 @@
       ],
       "text/plain": [
        "    Ticker  Price (6 months)  Price (now)  Net Change\n",
-       "360   PLTR             44.86       92.660  106.553723\n",
-       "171    EQT             37.48       51.710   37.966916\n",
-       "468   VRSN            181.26      249.255   37.512413\n",
-       "308    MCK            507.41      695.000   36.970103\n",
-       "365   PAYC            164.63      218.030   32.436372"
+       "360   PLTR             44.86       92.770      106.80\n",
+       "171    EQT             37.48       51.890       38.45\n",
+       "468   VRSN            181.26      249.185       37.47\n",
+       "308    MCK            507.41      695.040       36.98\n",
+       "365   PAYC            164.63      217.980       32.41"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
