--- a/main.ipynb
+++ b/main.ipynb
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,13 +463,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
     "percent_format = writer.book.add_format(\n",
     "    {\n",
-    "        'num_format': '0.00%',\n",
+    "        'num_format': '0.00',\n",
     "        'font_color': font_color,\n",
     "        'bg_color': background_color,\n",
     "        'border': 1\n",
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1253,7 +1253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1264,7 +1264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1282,7 +1282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1298,13 +1298,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
     "percent_format = writer.book.add_format(\n",
     "    {\n",
-    "        'num_format': '0.00%',\n",
+    "        'num_format': '0.00',\n",
     "        'font_color': font_color,\n",
     "        'bg_color': background_color,\n",
     "        'border': 1\n",
@@ -1314,7 +1314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1330,7 +1330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1345,7 +1345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1356,7 +1356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
