--- a/main.ipynb
+++ b/main.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,6 +22,7 @@
     "from scipy import stats\n",
     "from datetime import datetime\n",
     "from dateutil.relativedelta import relativedelta\n",
+    "import pprint\n",
     "%matplotlib inline"
    ]
   },
@@ -1253,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1264,7 +1265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1282,7 +1283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1298,7 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1314,7 +1315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1330,7 +1331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1345,7 +1346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1356,11 +1357,349 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
     "writer.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# More Realistic Momentum Strategy\n",
+    "\n",
+    "Want to differentiate from high quality and low quality\n",
+    "- high quality - have slow and steady outperformance over long period of time\n",
+    "- low quality - might be from one surge of increase \n",
+    "\n",
+    "We want high quality momentum stocks because it shows repeated success rather than a surge in increase due to one event."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Ticker</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>One-Year Price Return</th>\n",
+       "      <th>One-Year Return Percentile</th>\n",
+       "      <th>Six-Month Price Return</th>\n",
+       "      <th>Six-Month Return Percentile</th>\n",
+       "      <th>Three-Month Price Return</th>\n",
+       "      <th>Three-Month Return Percentile</th>\n",
+       "      <th>One-Month Price Return</th>\n",
+       "      <th>One-Month Return Percentile</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [Ticker, Price, One-Year Price Return, One-Year Return Percentile, Six-Month Price Return, Six-Month Return Percentile, Three-Month Price Return, Three-Month Return Percentile, One-Month Price Return, One-Month Return Percentile]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hqm_columns = [\n",
+    "    'Ticker',\n",
+    "    'Price',\n",
+    "    'One-Year Price Return',\n",
+    "    'One-Year Return Percentile',\n",
+    "    'Six-Month Price Return',\n",
+    "    'Six-Month Return Percentile',\n",
+    "    'Three-Month Price Return',\n",
+    "    'Three-Month Return Percentile',\n",
+    "    'One-Month Price Return',\n",
+    "    'One-Month Return Percentile'\n",
+    "]\n",
+    "\n",
+    "hqm_df = pd.DataFrame(columns=hqm_columns)\n",
+    "hqm_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Making API Calls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "today = datetime.today()\n",
+    "one_year = today - relativedelta(years = 1, months = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2025-04-17 13:36:07.577227\n",
+      "2024-03-17 13:36:07.577227\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(today)\n",
+    "print(one_year)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "symbol = 'AAPL'\n",
+    "price_history = client.price_history(symbol, periodType='year', frequencyType='monthly', frequency=1, startDate=one_year, endDate=today).json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1727758800000\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(price_history['candles'][6]['datetime'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "entries = []\n",
+    "for symbol in sp500_constituents:\n",
+    "    price_history = client.price_history(symbol, periodType='month', frequency=1, startDate=one_year, endDate=today).json()\n",
+    "    price_now = price_history['candles'][-1]['close']\n",
+    "    price_12_months = price_history['candles'][0]['close']\n",
+    "    price_6_months = price_history['candles'][6]['close']\n",
+    "    price_3_months = price_history['candles'][9]['close']\n",
+    "    price_1_month = price_history['candles'][-2]['close']\n",
+    "    net_change_12= round(((price_now - price_12_months)/ price_12_months) * 100, 2)\n",
+    "    net_change_6 = round(((price_now - price_6_months)/ price_6_months) * 100, 2)\n",
+    "    net_change_3 = round(((price_now - price_3_months)/ price_3_months) * 100, 2)\n",
+    "    net_change_1 = round(((price_now - price_1_month)/ price_1_month) * 100, 2)\n",
+    "    entries.append(\n",
+    "        [\n",
+    "            symbol,\n",
+    "            price_now,\n",
+    "            net_change_12,\n",
+    "            'N/a',\n",
+    "            net_change_6,\n",
+    "            'N/a',\n",
+    "            net_change_3,\n",
+    "            'N/a',\n",
+    "            net_change_1,\n",
+    "            'N/a'\n",
+    "        ]\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hqm_df = pd.DataFrame(entries, columns=hqm_columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Ticker</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>One-Year Price Return</th>\n",
+       "      <th>One-Year Return Percentile</th>\n",
+       "      <th>Six-Month Price Return</th>\n",
+       "      <th>Six-Month Return Percentile</th>\n",
+       "      <th>Three-Month Price Return</th>\n",
+       "      <th>Three-Month Return Percentile</th>\n",
+       "      <th>One-Month Price Return</th>\n",
+       "      <th>One-Month Return Percentile</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>MMM</td>\n",
+       "      <td>132.0300</td>\n",
+       "      <td>47.88</td>\n",
+       "      <td>N/a</td>\n",
+       "      <td>35.90</td>\n",
+       "      <td>N/a</td>\n",
+       "      <td>32.47</td>\n",
+       "      <td>N/a</td>\n",
+       "      <td>-2.88</td>\n",
+       "      <td>N/a</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AOS</td>\n",
+       "      <td>63.4900</td>\n",
+       "      <td>-28.89</td>\n",
+       "      <td>N/a</td>\n",
+       "      <td>-24.69</td>\n",
+       "      <td>N/a</td>\n",
+       "      <td>-25.11</td>\n",
+       "      <td>N/a</td>\n",
+       "      <td>-1.57</td>\n",
+       "      <td>N/a</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ABT</td>\n",
+       "      <td>132.3700</td>\n",
+       "      <td>19.72</td>\n",
+       "      <td>N/a</td>\n",
+       "      <td>25.00</td>\n",
+       "      <td>N/a</td>\n",
+       "      <td>27.34</td>\n",
+       "      <td>N/a</td>\n",
+       "      <td>4.33</td>\n",
+       "      <td>N/a</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ABBV</td>\n",
+       "      <td>174.7425</td>\n",
+       "      <td>-2.08</td>\n",
+       "      <td>N/a</td>\n",
+       "      <td>6.69</td>\n",
+       "      <td>N/a</td>\n",
+       "      <td>11.26</td>\n",
+       "      <td>N/a</td>\n",
+       "      <td>-0.18</td>\n",
+       "      <td>N/a</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ACN</td>\n",
+       "      <td>284.7200</td>\n",
+       "      <td>-15.64</td>\n",
+       "      <td>N/a</td>\n",
+       "      <td>-6.25</td>\n",
+       "      <td>N/a</td>\n",
+       "      <td>-5.41</td>\n",
+       "      <td>N/a</td>\n",
+       "      <td>0.13</td>\n",
+       "      <td>N/a</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Ticker     Price  One-Year Price Return One-Year Return Percentile  \\\n",
+       "0    MMM  132.0300                  47.88                        N/a   \n",
+       "1    AOS   63.4900                 -28.89                        N/a   \n",
+       "2    ABT  132.3700                  19.72                        N/a   \n",
+       "3   ABBV  174.7425                  -2.08                        N/a   \n",
+       "4    ACN  284.7200                 -15.64                        N/a   \n",
+       "\n",
+       "   Six-Month Price Return Six-Month Return Percentile  \\\n",
+       "0                   35.90                         N/a   \n",
+       "1                  -24.69                         N/a   \n",
+       "2                   25.00                         N/a   \n",
+       "3                    6.69                         N/a   \n",
+       "4                   -6.25                         N/a   \n",
+       "\n",
+       "   Three-Month Price Return Three-Month Return Percentile  \\\n",
+       "0                     32.47                           N/a   \n",
+       "1                    -25.11                           N/a   \n",
+       "2                     27.34                           N/a   \n",
+       "3                     11.26                           N/a   \n",
+       "4                     -5.41                           N/a   \n",
+       "\n",
+       "   One-Month Price Return One-Month Return Percentile  \n",
+       "0                   -2.88                         N/a  \n",
+       "1                   -1.57                         N/a  \n",
+       "2                    4.33                         N/a  \n",
+       "3                   -0.18                         N/a  \n",
+       "4                    0.13                         N/a  "
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hqm_df.head()"
    ]
   }
  ],
