okay actually this time it should work

--- a/main.ipynb
+++ b/main.ipynb
@@ -2229,20 +2229,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
     "path = '/Users/josemelvincalleja/Quantitative-Momentuem-Investing-Strategy/total_data.xlsx'\n",
     "\n",
-    "writer = pd.ExcelWriter('path', engine='xlsxwriter')\n",
+    "writer = pd.ExcelWriter(path, engine='xlsxwriter')\n",
     "\n",
     "hqm_df.to_excel(writer, sheet_name='Better Movers', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2278,7 +2278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2299,7 +2299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2310,7 +2310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
