--- a/main.ipynb
+++ b/main.ipynb
@@ -2229,20 +2229,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = '/Users/josemelvincalleja/Quantitative-Momentuem-Investing-Strategy/total_data.xlsx'\n",
+    "workbook = xlsxwriter.Workbook('total_data.xlsx')\n",
+    "worksheet = workbook.add_worksheet('Better Movers')\n",
     "\n",
-    "writer = pd.ExcelWriter(path, engine='xlsxwriter')\n",
+    "writer = pd.ExcelWriter('total_data.xlsx', engine='xlsxwriter')\n",
     "\n",
     "hqm_df.to_excel(writer, sheet_name='Better Movers', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2278,7 +2279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2299,7 +2300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2310,7 +2311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
