--- a/main.ipynb
+++ b/main.ipynb
@@ -2233,10 +2233,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "workbook = xlsxwriter.Workbook('total_data.xlsx')\n",
-    "worksheet = workbook.add_worksheet('Better Movers')\n",
-    "\n",
-    "writer = pd.ExcelWriter('total_data.xlsx', engine='xlsxwriter')\n",
+    "writer = pd.ExcelWriter('better_total_data.xlsx', engine='xlsxwriter')\n",
     "\n",
     "hqm_df.to_excel(writer, sheet_name='Better Movers', index=False)"
    ]
