--- a/main.ipynb
+++ b/main.ipynb
@@ -2229,25 +2229,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
-    "writer = pd.ExcelWriter('better_total_data.xlsx', engine='xlsxwriter')\n",
+    "writer1 = pd.ExcelWriter('better_total_data.xlsx', engine='xlsxwriter')\n",
     "\n",
-    "hqm_df.to_excel(writer, sheet_name='Better Movers', index=False)"
+    "hqm_df.to_excel(writer1, sheet_name='Better Movers', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
     "background_color = '#0a0a23'\n",
     "font_color = '#ffffff'\n",
     "\n",
-    "string_format = writer.book.add_format(\n",
+    "string_format = writer1.book.add_format(\n",
     "    {\n",
     "        'font_color': font_color,\n",
     "        'bg_color': background_color,\n",
@@ -2255,7 +2255,7 @@
     "    }\n",
     ")\n",
     "\n",
-    "dollar_format = writer.book.add_format(\n",
+    "dollar_format = writer1.book.add_format(\n",
     "    {\n",
     "        'num_format': '$0.00',\n",
     "        'font_color': font_color,\n",
@@ -2264,7 +2264,7 @@
     "    }\n",
     ")\n",
     "\n",
-    "percent_format = writer.book.add_format(\n",
+    "percent_format = writer1.book.add_format(\n",
     "    {\n",
     "        'num_format': '0.00',\n",
     "        'font_color': font_color,\n",
@@ -2276,7 +2276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2297,22 +2297,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
     "for column in column_formats.keys():\n",
-    "    writer.sheets['Better Movers'].set_column(f'{column}:{column}', 20, column_formats[column][1])\n",
-    "    writer.sheets['Better Movers'].write(f'{column}1', column_formats[column][0], column_formats[column][1])"
+    "    writer1.sheets['Better Movers'].set_column(f'{column}:{column}', 20, column_formats[column][1])\n",
+    "    writer1.sheets['Better Movers'].write(f'{column}1', column_formats[column][0], column_formats[column][1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
-    "writer.close()"
+    "writer1.close()"
    ]
   }
  ],
