what a stupid mistake

--- a/main.ipynb
+++ b/main.ipynb
@@ -2229,7 +2229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2240,7 +2240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2276,7 +2276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2297,18 +2297,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for column in column_formats.keys():\n",
-    "    writer1.sheets['Better Movers'].set_column(f'{column}:{column}', 20, column_formats[column][1])\n",
-    "    writer1.sheets['Better Movers'].write(f'{column}1', column_formats[column][0], column_formats[column][1])"
+    "for column in hqm_column_formats.keys():\n",
+    "    writer1.sheets['Better Movers'].set_column(f'{column}:{column}', 20, hqm_column_formats[column][1])\n",
+    "    writer1.sheets['Better Movers'].write(f'{column}1', hqm_column_formats[column][0], hqm_column_formats[column][1])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
